Results and P Tables done

--- a/jaws-spark-sql-rest/src/main/resources/application.conf
+++ b/jaws-spark-sql-rest/src/main/resources/application.conf
@@ -79,7 +79,7 @@ appConf{
 	# implicit akka timeout
 	timeout=1000000
 	#where to log, save results and keep parquet - dal type = cassandra/hdfs
-	app.dal.type=hdfs
+	app.dal.type=cassandra
 	# folder where to write the results schema
 	schemaFolder=jawsSchemaFolder
 	# the path to the xpatterns-jaws in target folder
@@ -119,6 +119,6 @@ hadoopConf {
 ########## cassandra configuration - skip this if you are using hdfs DAL ##########
 cassandraConf {
 	cassandra.host="localhost:9160"
-	cassandra.keyspace=xpatterns_jaws
+	cassandra.keyspace=xpatterns_jaws_xt
 	cassandra.cluster.name=Jaws
 }
