--- a/jaws-spark-sql-rest/src/main/resources/application.conf
+++ b/jaws-spark-sql-rest/src/main/resources/application.conf
@@ -122,3 +122,11 @@ cassandraConf {
 	cassandra.keyspace=xpatterns_jaws_xt
 	cassandra.cluster.name=Jaws
 }
+
+############# Kerberos configuration ##################
+kerberosConf {
+	principal.id="cristiani@STAGING.XPATTERNS.COM"
+	keytabfile.path = "/Users/cristianionitoiu/cristiani.keytab"
+	kerberos.realm = "STAGING.XPATTERNS.COM"
+	kerberos.ip = "10.0.2.181"
+}
