--- a/jaws-spark-sql-rest/src/main/resources/application.conf
+++ b/jaws-spark-sql-rest/src/main/resources/application.conf
@@ -30,8 +30,8 @@ sparkConfiguration {
 	spark-mesos-coarse=false
 	spark-scheduler-mode=FAIR
 	spark-cores-max=2
-	spark-master="spark://localhost:7077"
-	spark-path="/Users/cristianionitoiu/work/spark-1.6.0-bin-hadoop2.6"
+	#spark-master="spark://scdh56-master.staging.xpatterns.com:7077"
+	#spark-path="/Users/cristianionitoiu/work/spark-1.6.0-bin-hadoop2.6"
 	# spark-mesos-executor-home="/home/ubuntu/latest-mssh/spark-1.1.0"
 	spark-default-parallelism=384
 	spark-storage-memoryFraction=0.3
@@ -62,7 +62,7 @@ appConf{
 	# the default number of results retrieved on queries
 	nr.of.results=100
 	# the ip of the destination namenode - it is used when querying with unlimited number of results.
-	rdd.destination.ip="localhost"
+	rdd.destination.ip="scdh56-master.staging.xpatterns.com"
 	# where to store the results in the case of an unlimited query. Possible results : hdfs/tachyon. Default hdfs
 	rdd.destination.location=hdfs
 	# the remote doamain actor address
@@ -85,14 +85,14 @@ appConf{
 	# the path to the xpatterns-jaws in target folder
 	jar-path="/Users/cionitoiu/work/jaws/jaws-spark-sql-rest/target/jaws-spark-sql-rest.jar,/Users/cristianionitoiu/work/xpatterns-spark-parquet/spark-parquet-utility/target/spark-parquet-utility.jar"
 	# the path to the hdfs namenode
-	hdfs-namenode-path="hdfs://localhost:8020"
+	hdfs-namenode-path="hdfs://scdh56-master.staging.xpatterns.com:8020"
 	# the path to the tachyon namenode
 	tachyon-namenode-path="tachyon://localhost:19998"
 }
 
 ########## hadoop configuration - used to built HIVEContext and for HDFS Dal (if selected) ########
 hadoopConf {
-	namenode="hdfs://localhost:8020"
+	namenode="hdfs://scdh56-master.staging.xpatterns.com:8020"
 	replicationFactor=1
 	# set on true if you want to start fresh (all the existing folders will be recreated)
 	forcedMode=false
