--- a/jaws-spark-sql-rest/src/test/resources/application.conf
+++ b/jaws-spark-sql-rest/src/test/resources/application.conf
@@ -61,7 +61,7 @@ appConf{
   # the default number of results retrieved on queries
   nr.of.results=100
   # the ip of the destination namenode - it is used when querying with unlimited number of results.
-  rdd.destination.ip="devbox.local"
+  rdd.destination.ip="scdh56-master.staging.xpatterns.com" //localhost
   # where to store the results in the case of an unlimited query. Possible results : hdfs/tachyon. Default hdfs
   rdd.destination.location="hdfs"
   # the remote doamain actor address
@@ -84,14 +84,14 @@ appConf{
   # the path to the xpatterns-jaws in target folder
   jar-path="/Users/cionitoiu/work/jaws/jaws-spark-sql-rest/target/jaws-spark-sql-rest.jar,/Users/cristianionitoiu/work/xpatterns-spark-parquet/spark-parquet-utility/target/spark-parquet-utility.jar"
   # the path to the hdfs namenode
-  hdfs-namenode-path="hdfs://localhost:8020"
+  hdfs-namenode-path="hdfs://scdh56-master.staging.xpatterns.com:8020"
   # the path to the tachyon namenode
   tachyon-namenode-path="tachyon://localhost:19998"
 }
 
 ########## hadoop configuration - used to built HIVEContext and for HDFS Dal (if selected) ########
 hadoopConf {
-  namenode="hdfs://localhost:8020"
+  namenode="hdfs://scdh56-master.staging.xpatterns.com:8020"
   replicationFactor=1
   # set on true if you want to start fresh (all the existing folders will be recreated)
   forcedMode=false
