--- a/jaws-spark-sql-rest/pom.xml
+++ b/jaws-spark-sql-rest/pom.xml
@@ -17,6 +17,17 @@
 		<spark.version>1.6.0</spark.version>
 	</properties>
 
+	<!--<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven/</url>
+		</repository>
+		<repository>
+			<id>cloudera</id>
+			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+		</repository>
+	</repositories>-->
+
 	<dependencies>
 		<dependency>
 			<groupId>com.typesafe</groupId>
@@ -144,6 +155,12 @@
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-yarn_2.10</artifactId>
+			<version>${spark.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_2.10</artifactId>
 			<version>${spark.version}</version>
 			<exclusions>
@@ -182,8 +199,15 @@
 
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-yarn-api</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
 			<version>2.6.0</version>
+			<!--<version>2.6.0-cdh5.6.0</version>-->
 			<exclusions>
 				<exclusion>
 					<groupId>asm</groupId>
