--- a/jaws-spark-sql-data/pom.xml
+++ b/jaws-spark-sql-data/pom.xml
@@ -38,6 +38,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.liftweb</groupId>
+			<artifactId>lift-json_2.10</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.spray</groupId>
 			<artifactId>spray-json_2.10</artifactId>
 			<version>${spray.json.version}</version>
