--- a/jaws-spark-sql-data/pom.xml
+++ b/jaws-spark-sql-data/pom.xml
@@ -13,16 +13,22 @@
 		<spark.version>1.6.0</spark.version>
 	</properties>
 
-	<!--<repositories>
+	<repositories>
 		<repository>
 			<id>central</id>
-			<url>http://repo1.maven.org/maven/</url>
+			<url>http://repo1.maven.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
 		</repository>
-	</repositories>-->
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -58,6 +64,7 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>${spark.version}</version>
+			<!--<version>1.6.0-cdh5.7.0</version>-->
 			<exclusions>
 				<exclusion>
 					<artifactId>jcl-over-slf4j</artifactId>
@@ -152,8 +159,8 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
-			<version>2.6.0</version>
-			<!--<version>2.6.0-cdh5.6.0</version>-->
+			<!--<version>2.6.0</version>-->
+			<version>2.6.0-cdh5.6.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>asm</groupId>
