Clouadera Kerberos changes

--- a/jaws-spark-sql-rest/src/main/resources/application.conf
+++ b/jaws-spark-sql-rest/src/main/resources/application.conf
@@ -34,8 +34,8 @@ sparkConfiguration {
 	#spark-path="/Users/cristianionitoiu/work/spark-1.6.0-bin-hadoop2.6"
 	# spark-mesos-executor-home="/home/ubuntu/latest-mssh/spark-1.1.0"
 	spark-default-parallelism=384
-	spark-storage-memoryFraction=0.3
-	spark-shuffle-memoryFraction=0.6
+	#spark-storage-memoryFraction=0.3
+	#spark-shuffle-memoryFraction=0.6
 	spark-shuffle-compress=true
 	spark-shuffle-spill-compress=true
 	spark.reducer.maxSizeInFlight=48
