--- a/jaws-hive-sql-rest/pom.xml
+++ b/jaws-hive-sql-rest/pom.xml
@@ -11,8 +11,25 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spray.io.version>1.3.1</spray.io.version>
+		<spray.io.version>1.2.0</spray.io.version>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>cloudera</id>
+			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -30,7 +47,7 @@
 		<dependency>
 			<groupId>io.spray</groupId>
 			<artifactId>spray-json_2.10</artifactId>
-			<version>${spray.io.version}</version>
+			<version>1.2.5</version>
 		</dependency>
 
 		<dependency>
@@ -96,7 +113,7 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
-			<version>2.6.0</version>
+			<version>2.6.0-cdh5.6.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>asm</groupId>
