--- a/jaws-spark-sql-data/pom.xml
+++ b/jaws-spark-sql-data/pom.xml
@@ -10,7 +10,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spray.json.version>1.2.6</spray.json.version>
 		<jackson.version>2.3.1</jackson.version>
-		<spark.version>1.6.0</spark.version>
 	</properties>
 
 	<repositories>
@@ -63,8 +62,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>${spark.version}</version>
-			<!--<version>1.6.0-cdh5.7.0</version>-->
+			<version>1.6.0-cdh5.7.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jcl-over-slf4j</artifactId>
@@ -159,7 +157,6 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
-			<!--<version>2.6.0</version>-->
 			<version>2.6.0-cdh5.6.0</version>
 			<exclusions>
 				<exclusion>
