--- a/jaws-spark-sql-rest/pom.xml
+++ b/jaws-spark-sql-rest/pom.xml
@@ -12,9 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spray.io.version>1.3.1</spray.io.version>
+		<spray.io.version>1.2.0</spray.io.version>
 		<jackson.version>2.3.1</jackson.version>
-		<spark.version>1.6.0</spark.version>
 	</properties>
 
 	<repositories>
@@ -162,15 +161,13 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-yarn_2.10</artifactId>
-			<version>${spark.version}</version>
-			<!--<version>1.6.0-cdh5.7.0</version>-->
+			<version>1.6.0-cdh5.7.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_2.10</artifactId>
-			<version>${spark.version}</version>
-			<!--<version>1.6.0-cdh5.7.0</version>-->
+			<version>1.6.0-cdh5.7.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.hadoop</groupId>
@@ -208,14 +205,12 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-yarn-api</artifactId>
-			<!--<version>2.6.0</version>-->
 			<version>2.6.0-cdh5.6.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
-			<!--<version>2.6.0</version>-->
 			<version>2.6.0-cdh5.6.0</version>
 			<exclusions>
 				<exclusion>
